--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,11 +1,21 @@
 @import 'tailwindcss';
+
 #root {
   height: 100vh;
   display: flex;
+  @media (max-width: 768px) {
+    flex-direction: column;
+  }
 }
 
 .header {
   width: 26%;
+  @media (max-width: 1000px) {
+    width: 18%;
+  }
+  @media (max-width: 768px) {
+    width: 100%;
+  }
 }
 
 .main {
@@ -13,6 +23,13 @@
   scrollbar-width: none;
   -ms-overflow-style: none;
   scroll-behavior: smooth;
+  @media (max-width: 1000px) {
+    width: 40%;
+  }
+  @media (max-width: 768px) {
+    width: 100%;
+    min-height: 200px;
+  }
 }
 
 .main::-webkit-scrollbar {
@@ -22,6 +39,13 @@
 
 .left {
   min-width: 38%;
+  @media (max-width: 1000px) {
+    width: 42%;
+  }
+  @media (max-width: 768px) {
+    width: 100%;
+    height: 400px;
+  }
 }
 
 .hover {
